classDiagram
    class Location {
        -String alias
        -String description
        -LocationType type
        -double latitude
        -double longitude
        +Location(alias: String, description: String, type: LocationType, latitude: double, longitude: double)
    }

    class Person {
        -String name
        -Location location
        -boolean isVisible 
        -String gender;
	    -double height;
	    -double weight;
        +Person(name: String, location: Location, isVisible: boolean, gender: String, height: double, weight: double)
        +changeAppearance(method: String, newAppearance: String)
        +interact(character: Character)
        +toString() String
        +getName() String
    }

    class Dog {
        +Dog(name: String, location: Location, isVisible: boolean)
        +interact(character: Character)
    }

    class Swallow {
        +Swallow(name: String, location: Location, isVisible: boolean)
        +interact(character: Character)
    }

    class CharacterState {
        <<enumeration>>
        NORMAL
        DISGUISED
        TRANSFORMED
    }

    class LocationType {
        <<enumeration>>
        PALACE
        FOREST
    }

    class AppearanceChangeFailedException {
        +AppearanceChangeFailedException(message: String)
    }

    class CharacterNotFoundException {
        +CharacterNotFoundException(message: String)
    }

    class InvalidStateException {
        +InvalidStateException(message: String)
    }

    Person --|> Character
    Dog --|> Character
    Swallow --|> Character
    Character --o Location
    Character --> CharacterState
    Location --> LocationType
    AppearanceChangeException --|> Exception
    CharacterNotFoundException --|> Exception
    InvalidStateException --|> Exception